Fix mobile responsiveness and hover/active pseudocode on mobile

--- a/styles.css
+++ b/styles.css
@@ -105,17 +105,20 @@ input:checked + .slider:hover {
   background-color:  rgb(248,248,255);
   border: 3px outset rgb(21, 21, 21);
   border-radius: 25px;
-  width: 90%;
+  width: 75vw;
   max-width: 400px;
-  height: 60vh;
+  height: 62vh;
   box-shadow: 0 26px 58px 5px rgba(0, 0, 0, .22), 0 5px 14px 0 rgba(0, 0, 0, .18);
   transition: background 0.2s linear;
 }
 
 @media (max-width: 480px) {
   .calculator-container {
-    height: 67vh; 
-    max-width: 340px;
+    height: 65vh; 
+  }
+
+  .footer {
+    margin-bottom: 80px;
   }
 }
 
@@ -157,11 +160,11 @@ input:checked + .slider:hover {
 
 @media (max-width: 768px) {
   .expression {
-    font-size: 17px;
+    font-size: 14px;
   }
 
   .result {
-    font-size: 38px;
+    font-size: 30px;
   }
 }
 
@@ -172,6 +175,15 @@ input:checked + .slider:hover {
   width: 100%;
   gap: 13px;
   padding: 15px;
+}
+
+@media (max-width: 480px) {
+  .button-container {
+    grid-template-columns: repeat(4, minmax(30px, 1fr));
+    width: 100%;
+    gap: 8px;
+    padding: 10px;
+  }
 }
 
 .button {
@@ -189,21 +201,18 @@ input:checked + .slider:hover {
   -webkit-user-select: none;
   -ms-user-select: none;
   transition: background 0.2s linear;
-}
-
-@media (max-width: 768px) {
-  .button {
-    font-size: 25px;
-  }
-
-  svg {
-    transform: scale(1);
-  }
+  touch-action: manipulation;
 }
 
 svg {
   transform: scale(1.5);
   transform-origin: center;
+}
+
+@media (max-width: 768px) {
+  svg {
+    transform: scale(1.1);
+  }
 }
 
 .button:hover {
@@ -256,6 +265,14 @@ svg {
   transition: background 0.2s linear;
 }
 
+.dark-mode .button:active {
+  background-color: rgb(48, 73, 73);
+}
+
+.button:active {
+  background-color: rgb(176, 175, 175);
+}
+
 .gitSVG {
   width: 30px;
   height: 30px;
@@ -279,5 +296,39 @@ svg {
   }
   75% {
     transform: translateY(-5px);
+  }
+}
+
+@media (max-width: 768px) {
+  .button {
+    font-size: 22px;
+  }
+}
+
+@media (hover: none) {
+  .dark-mode .button:hover {
+    background-color: black;
+  }
+
+  .button:hover {
+    background-color: rgb(236, 236, 236);
+  }
+
+  .dark-mode .button:active {
+    background-color: rgb(48, 73, 73);
+  }
+
+  .button:active {
+    background-color: rgb(176, 175, 175);
+  }
+}
+
+@media (max-width: 480px) {
+  .button {
+    font-size: 20px;
+  }
+
+  svg {
+    transform: scale(1);
   }
 }
